validation message resources

--- a/Common/Services/Validation/Attributes/Resources/ValidationMessages.el-gr.resx
+++ b/Common/Services/Validation/Attributes/Resources/ValidationMessages.el-gr.resx
@@ -120,4 +120,7 @@
   <data name="ValidationEmailError" xml:space="preserve">
     <value>Το πεδίο '{0}' δεν είναι e-mail. Παράδειγμα e-mail: info@microsoft.com</value>
   </data>
+  <data name="ValidationListCountError" xml:space="preserve">
+    <value>Το πεδίο '{0}' πρέπει να έχει τουλάχιστον {1} εγγραφές</value>
+  </data>
 </root>
