--- a/Common/Services/Validation/Attributes/Resources/ValidationMessages.resx
+++ b/Common/Services/Validation/Attributes/Resources/ValidationMessages.resx
@@ -120,4 +120,7 @@
   <data name="ValidationEmailError" xml:space="preserve">
     <value>The field '{0}' is not a correct e-mail. eg: info@microsoft.com</value>
   </data>
+  <data name="ValidationListCountError" xml:space="preserve">
+    <value>The field '{0}' must have at least {1} entries.</value>
+  </data>
 </root>
