--- a/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PasswordEncryption_EncryptedPasswordCannotBeHashed" xml:space="preserve">
+    <value>The password cannot be hashed while being encrypted</value>
+  </data>
   <data name="PasswordValidation_CannotValidateEncryptedPassword" xml:space="preserve">
     <value>The password is encrypted and cannot be validated.</value>
   </data>
@@ -125,9 +128,6 @@
   </data>
   <data name="PasswordValidation_EmptyPassword" xml:space="preserve">
     <value>The password cannot be empty.</value>
-  </data>
-  <data name="PasswordValidation_GeneralMessage" xml:space="preserve">
-    <value>The password is not valid</value>
   </data>
   <data name="PasswordValidation_MaximumCharacterRequired" xml:space="preserve">
     <value>The password needs to have less than: {0} characters</value>
@@ -142,5 +142,8 @@
   </data>
   <data name="PasswordValidation_SpecialsRequired" xml:space="preserve">
     <value>The password needs to have at least one special character.</value>
+  </data>
+  <data name="Password_GeneralMessage" xml:space="preserve">
+    <value>The password is not valid</value>
   </data>
 </root>
