--- a/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MappingContext_MissingUser" xml:space="preserve">
+    <value>Missing context item: User</value>
+  </data>
   <data name="PasswordEncryption_EncryptedPasswordCannotBeHashed" xml:space="preserve">
     <value>The password cannot be hashed while being encrypted</value>
   </data>
