--- a/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
+++ b/src/Account/FreeParkingSystem.Accounts.Contract/Resources/Validations.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Claim_AlreadyExists" xml:space="preserve">
+    <value>The claim already exists</value>
+  </data>
+  <data name="Claim_DoesNotExist" xml:space="preserve">
+    <value>The claim does not exist</value>
+  </data>
   <data name="MappingContext_MissingUser" xml:space="preserve">
     <value>Missing context item: User</value>
   </data>
@@ -148,5 +154,8 @@
   </data>
   <data name="Password_GeneralMessage" xml:space="preserve">
     <value>The password is not valid</value>
+  </data>
+  <data name="User_AlreadyExists" xml:space="preserve">
+    <value>Username is unavailable</value>
   </data>
 </root>
