--- a/src/Common/FreeParkingSystem.Common/Resources/Validations.resx
+++ b/src/Common/FreeParkingSystem.Common/Resources/Validations.resx
@@ -117,7 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="User_Unauthorized" xml:space="preserve">
+  <data name="Unauthenticated_Message" xml:space="preserve">
+    <value>This request requires authentication</value>
+  </data>
+  <data name="Unauthenticated_Title" xml:space="preserve">
+    <value>Unauthenticated</value>
+  </data>
+  <data name="Unauthorized_Message" xml:space="preserve">
     <value>The user does not have the privilege to process this action.</value>
+  </data>
+  <data name="Unauthorized_Title" xml:space="preserve">
+    <value>Unauthorized</value>
+  </data>
+  <data name="Unhandled_Message" xml:space="preserve">
+    <value>The Request could not be handled.</value>
+  </data>
+  <data name="Unhandled_Title" xml:space="preserve">
+    <value>Unknown Error</value>
+  </data>
+  <data name="Validation_Title" xml:space="preserve">
+    <value>Validation Error</value>
   </data>
 </root>
