--- a/src/Common/FreeParkingSystem.Common/Resources/Validations.resx
+++ b/src/Common/FreeParkingSystem.Common/Resources/Validations.resx
@@ -59,7 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema requestId="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -142,6 +142,6 @@
     <value>Unknown Error</value>
   </data>
   <data name="Validation_Title" xml:space="preserve">
-    <value>Validation Error</value>
+    <value>ValrequestIdation Error</value>
   </data>
 </root>
